--- a/.github/workflows/package_update.yml
+++ b/.github/workflows/package_update.yml
@@ -17,12 +17,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"  # Changed to match Pipfile
+        python-version: "3.10.11"
 
     - name: Install Pipenv
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
+
+    - name: Install jq
+      run: sudo apt-get install jq -y
 
     - name: Install dependencies from lock file
       run: pipenv sync --dev
@@ -42,12 +45,12 @@ jobs:
     - name: Show locked requirements
       run: |
         echo "Locked requirements:"
-        jq -r '.default + .develop | to_entries[] | .key + .value.version' Pipfile.lock
+        jq -r '.default + .develop | to_entries[] | .key + "==" + .value.version' Pipfile.lock
 
     - name: Compare installed packages with locked requirements
       run: |
         echo "Locked requirements:"
-        pipenv lock --requirements
+        jq -r '.default + .develop | to_entries[] | .key + "==" + .value.version' Pipfile.lock
         echo "Actually installed packages:"
         pipenv run pip list
 
