--- a/.github/workflows/market_data.yml
+++ b/.github/workflows/market_data.yml
@@ -28,10 +28,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
 
+      - name: Debug Pipenv
+        run: |
+          cat Pipfile
+          pipenv graph
+          pipenv check
+      
       - name: Install Dependencies
         run: |
-          pipenv install --dev
-          pipenv run pip freeze > requirements.txt
+          pipenv lock --pre
+          pipenv install --dev --skip-lock
+        continue-on-error: true
+      
+      - name: Show dependency conflicts
+        if: failure()
+        run: |
+          pipenv graph
+          pipenv check
 
       - name: Generate .py files
         working-directory: reference_data/market_data
