--- a/.github/workflows/op_stack_metadata_upload.yml
+++ b/.github/workflows/op_stack_metadata_upload.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           pipenv run jupyter nbconvert --to python inputs/clean_chain_metadata_and_upload.ipynb
           pipenv run jupyter nbconvert --to python clickhouse_builds/create_superchain_data_view.ipynb
+          pipenv run jupyter nbconvert --to python clickhouse_builds/create_transfers_mv.ipynb
           
       - name: Generate Chain Metadata
         working-directory: op_chains_tracking/inputs
@@ -69,10 +70,11 @@ jobs:
           OP_CLICKHOUSE_USER: ${{ secrets.OP_CLICKHOUSE_USER }}
           OP_CLICKHOUSE_PW: ${{ secrets.OP_CLICKHOUSE_PW }}
           OP_CLICKHOUSE_PORT: ${{ secrets.OP_CLICKHOUSE_PORT }}
-      - name: Create View
+      - name: Create Views
         working-directory: op_chains_tracking
         run: |
           pipenv run python clickhouse_builds/create_superchain_data_view.py
+          pipenv run python clickhouse_builds/create_transfers_mv.py
         env:
           OP_CLICKHOUSE_HOST: ${{ secrets.OP_CLICKHOUSE_HOST }}
           OP_CLICKHOUSE_USER: ${{ secrets.OP_CLICKHOUSE_USER }}
