--- a/.github/workflows/op_stack_metadata_upload.yml
+++ b/.github/workflows/op_stack_metadata_upload.yml
@@ -70,10 +70,20 @@ jobs:
           OP_CLICKHOUSE_USER: ${{ secrets.OP_CLICKHOUSE_USER }}
           OP_CLICKHOUSE_PW: ${{ secrets.OP_CLICKHOUSE_PW }}
           OP_CLICKHOUSE_PORT: ${{ secrets.OP_CLICKHOUSE_PORT }}
-      - name: Create Views
+
+      - name: Create Matviews
         working-directory: op_chains_tracking/clickhouse_builds
         run: |
           pipenv run python create_transfers_mv.py
+        env:
+          OP_CLICKHOUSE_HOST: ${{ secrets.OP_CLICKHOUSE_HOST }}
+          OP_CLICKHOUSE_USER: ${{ secrets.OP_CLICKHOUSE_USER }}
+          OP_CLICKHOUSE_PW: ${{ secrets.OP_CLICKHOUSE_PW }}
+          OP_CLICKHOUSE_PORT: ${{ secrets.OP_CLICKHOUSE_PORT }}
+
+      - name: Create Views
+        working-directory: op_chains_tracking/clickhouse_builds
+        run: |
           pipenv run python create_superchain_data_view.py
         env:
           OP_CLICKHOUSE_HOST: ${{ secrets.OP_CLICKHOUSE_HOST }}
