--- a/.github/workflows/op_stack_metadata_upload.yml
+++ b/.github/workflows/op_stack_metadata_upload.yml
@@ -54,7 +54,7 @@ jobs:
         working-directory: op_chains_tracking
         run: |
           pipenv run jupyter nbconvert --to python inputs/clean_chain_metadata_and_upload.ipynb
-          pipenv run jupyter nbconvert --to python clickhouse_builds/create_transfers_mv.ipynb
+          pipenv run jupyter nbconvert --to python clickhouse_builds/create_matviews.ipynb
           pipenv run jupyter nbconvert --to python clickhouse_builds/create_superchain_data_view.ipynb
           
       - name: Generate Chain Metadata
@@ -74,7 +74,7 @@ jobs:
       - name: Create Matviews
         working-directory: op_chains_tracking/clickhouse_builds
         run: |
-          pipenv run python create_transfers_mv.py
+          pipenv run python create_matviews.py
         env:
           OP_CLICKHOUSE_HOST: ${{ secrets.OP_CLICKHOUSE_HOST }}
           OP_CLICKHOUSE_USER: ${{ secrets.OP_CLICKHOUSE_USER }}
