--- a/.github/workflows/daily_l2_chain_data_uploads.yml
+++ b/.github/workflows/daily_l2_chain_data_uploads.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   setup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -25,7 +25,7 @@ jobs:
 
   run_notebook:
     needs: setup
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     strategy:
       fail-fast: false
       matrix:
